# aoc-2020

./: .gitignore  .tool-versions  Cargo.toml  README.md  template.rs
.github/workflows/: ci.yaml  ci.yml  release.yml
aoc-2019/: Cargo.toml
aoc-2019/src/: day01.rs  day02.rs  day03.rs  intcode.rs  lib.rs  main.rs
aoc-2020/: Cargo.toml
aoc-2020/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  lib.rs  main.rs
aoc-2021/: Cargo.toml
aoc-2021/day01/src/: lib.rs  main.rs
aoc-2021/day02/: Cargo.toml
aoc-2021/day02/src/: lib.rs
aoc-2021/day03/: Cargo.toml
aoc-2021/day03/src/: lib.rs
aoc-2021/day04/src/: lib.rs
aoc-2021/day05/: Cargo.toml
aoc-2021/day05/src/: lib.rs
aoc-2021/day06/: Cargo.toml
aoc-2021/day06/src/: lib.rs
aoc-2021/day07/: Cargo.toml
aoc-2021/day07/src/: lib.rs
aoc-2021/day08/: Cargo.toml
aoc-2021/day08/src/: lib.rs
aoc-2021/day09/src/: lib.rs
aoc-2021/day10/: Cargo.toml
aoc-2021/day10/src/: lib.rs
aoc-2021/day11/: Cargo.toml
aoc-2021/day11/src/: lib.rs
aoc-2021/day12/: Cargo.toml
aoc-2021/day13/: Cargo.toml
aoc-2021/day13/src/: lib.rs
aoc-2021/day14/: Cargo.toml
aoc-2021/day14/src/: lib.rs
aoc-2021/day15/src/: lib.rs  main.rs
aoc-2021/day16/: Cargo.toml
aoc-2021/day16/src/: lib.rs  main.rs
aoc-2021/day17/: Cargo.toml
aoc-2021/day17/src/: lib.rs
aoc-2021/day18/: Cargo.toml
aoc-2021/day18/src/: lib.rs
aoc-2021/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  main.rs
aoc-2021_1/day01/: Cargo.toml
aoc-2021_1/day04/: Cargo.toml
aoc-2021_1/day05/: Cargo.toml
aoc-2021_1/day06/src/: lib.rs
aoc-2021_1/day07/src/: lib.rs
aoc-2021_1/day08/src/: lib.rs
aoc-2021_1/day09/: Cargo.toml
aoc-2021_1/day09/src/: lib.rs
aoc-2021_1/day15/: Cargo.toml
aoc-2022/: Cargo.toml
aoc-2022/day01/: Cargo.toml
aoc-2022/day01/src/: lib.rs
aoc-2022/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  main.rs
aoc-2023/: Cargo.toml
aoc-2023/src/: day01.rs  day02.rs  day03.rs  day04.rs  main.rs
src/: day01.rs  day02.rs  day03.rs  lib.rs  main.rs
