[package]
name = "aoc-2020"
version = "0.1.0"
authors = ["Morley, Jonathan <jmorley@cvent.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
envy = "0.4.1"
itertools = "0.9.0"
recap = "0.1.1"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
maplit = "1.0.2"
