[package]
name = "aoc-2019"
version = "0.1.0"
authors = ["Morley, Jonathan <jmorley@cvent.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
itertools = "0.9.0"
