[package]
name = "aoc-2020"
version = "0.1.0"
authors = ["Morley, Jonathan <jmorley@cvent.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
fnv = "1.0.7"
itertools = "0.9.0"
lazy_static = "1.4.0"
recap = "0.1.1"
regex = "1.4.2"
serde = { version = "1.0", features = ["derive"] }
