[package]
name = "aoc-2022"
version = "0.1.0"
authors = ["Morley, Jonathan <jmorley@cvent.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-main = { version = "0.4.1", features = ["bench"] }
itertools = "0.10.1"
nom = "7.1.1"
