[package]
name = "aoc-2022"
version = "0.1.0"
authors = ["Morley, Jonathan <jmorley@cvent.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-main = { workspace = true }
grid = "0.9.0"
itertools = "0.10"
num-bigint = "0.4.3"
petgraph = "0.6.2"
