[package]
name = "aoc-2023"
version = "0.1.0"
authors = ["Morley, Jonathan <jmorley@cvent.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-main = { workspace = true }
from-pest = "0.3.2"
grid = "0.12.0"
nom = "7.1.3"
pest = "2.7.5"
pest-ast = "0.3.4"
pest_derive = { version = "2.7.5", features = ["grammar-extras"] }
