[package]
name = "aoc-2021-day08"
version = "0.1.0"
authors = ["Morley, Jonathan <jmorley@cvent.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
bimap = "0.6.1"
strum = { version = "0.23.0", features = ["derive"] }
