[package]
name = "aoc-2021-day05"
version = "0.1.0"
authors = ["Morley, Jonathan <jmorley@cvent.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
itertools = "0.10.1"
nom = "7.1.0"
num = "0.4.0"
